@@ -66,7 +66,7 @@ class RoboJavaModulePlugin implements Plugin<Project> {
             }
 
             minHeapSize = "1024m"
-            maxHeapSize = "4096m"
+            maxHeapSize = "8192m"
 
             if (System.env['GRADLE_MAX_PARALLEL_FORKS'] != null) {
                 maxParallelForks = Integer.parseInt(System.env['GRADLE_MAX_PARALLEL_FORKS'])
@@ -75,7 +75,7 @@ class RoboJavaModulePlugin implements Plugin<Project> {
             def forwardedSystemProperties = System.properties
                     .findAll { k,v -> k.startsWith("robolectric.") }
                     .collect { k,v -> "-D$k=$v" }
-            jvmArgs = ["-XX:MaxPermSize=1024m"] + forwardedSystemProperties
+            jvmArgs = forwardedSystemProperties
 
             doFirst {
                 if (!forwardedSystemProperties.isEmpty()) {
